# psychology_reports

./: .dockerignore  .gitignore  Dockerfile  build_docker_image.sh  build_minio_image.sh  docker-compose-raspberry.yml  docker-compose.yml  pyproject.toml
app/: main.py  settings.py  worker.py
app/auth/: security,py
app/database/: __init__.py
app/models/: __init__.py  idadi.py  idadi_domains.py  idadi_normative_tables.py  idadi_values.py  patient.py  patient_record.py  programs_upload.py  psychologist.py  pti.py  pti_specific_objectives_subtopics.py  pti_specific_objectives_topics.py  pti_stimulus_areas.py
app/routers/: __init__.py  idadi.py  idadi_domains.py  patient_record.py  patients.py  programs_upload.py  psychologists.py  pti.py  pti_specific_objectives_subtopics.py  pti_specific_objectives_topics.py  pti_stimulus_area.py
app/schema/: __init__.py  idadi.py  idadi_domains.py  idadi_values.py  patient_record.py  patients.py  programs_upload.py  psychologists.py  pti.py  pti_specific_objectives_subtopics.py  pti_specific_objectives_topics.py  pti_stimulus_areas.py
app/service/: minio.py  minio_patch.py  pdf.py
app/tasks/: report.py
http/: test_idadi_domains.http  test_idadi_values.http  test_patient_records.http  test_patients.http  test_programs_upload.http  test_psychologists.http  test_pti.http  test_pti_stimulus_area.http  test_specific_objectives_subtopics.http  test_specific_objectives_topics.http
migrations/: env.py
migrations/versions/: 1db386758215_initial_migration.py  36721c734dc6_changing_patient_nullabe_fields.py  886c042ae0f8_insert_initial_data.py
